Closed Bug 245653 Opened 21 years ago Closed 21 years ago

components/build/nsModule tries to build with dogbert migration under BeOS, causing build to fail. AVIARY_1_0_20040515_BRANCH

Categories

(Firefox Build System :: General, defect)

x86
BeOS
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
Firefox1.0

People

(Reporter: thesuckiestemail, Assigned: bryner)

Details

(Keywords: fixed-aviary1.0)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.8a) Gecko/20040515 Firefox/0.8.0+ Build Identifier: nsModule.cpp should not include dogbert profile migration for BEOS. Reproducible: Always Steps to Reproduce:
Updated summary. Forgot to specify the AVIARY_1_0_20040515_BRANCH. Setting target.
Summary: components/build/nsModule tries to build with dogbert migration under BeOS, causing build to fail. → components/build/nsModule tries to build with dogbert migration under BeOS, causing build to fail. AVIARY_1_0_20040515_BRANCH
Target Milestone: --- → Firefox0.9
Comment on attachment 150078 [details] [diff] [review] patch to remove Dogbert from BeOS builds requesting review
Attachment #150078 - Flags: review?(sergei_d)
Comment on attachment 150078 [details] [diff] [review] patch to remove Dogbert from BeOS builds r=sergei_d@fi.tartu.ee
Attachment #150078 - Flags: review?(sergei_d) → review+
- Does this actually break the beos build? - If so, why? - If we want to not build this, it should be ifdef'd in browser/components/migration/src/Makefile.in as well.
(In reply to comment #5) > - Does this actually break the beos build? > - If so, why? > - If we want to not build this, it should be ifdef'd in > browser/components/migration/src/Makefile.in as well. > Have you taken a look at that file? From Makefile.in: ifneq ($(OS_ARCH),BeOS) CPPSRCS += nsDogbertProfileMigrator.cpp endif That's why the build is broken in the first place, the Makefile.in is already correct.
Comment on attachment 150078 [details] [diff] [review] patch to remove Dogbert from BeOS builds requesting sr (and checkin if positive)
Attachment #150078 - Flags: superreview?(bryner)
updating target milestone.
Target Milestone: Firefox0.9 → Firefox1.0
Comment on attachment 150078 [details] [diff] [review] patch to remove Dogbert from BeOS builds r/a=me for landing on aviary/trunk
Attachment #150078 - Flags: superreview?(bryner)
I'll close this one when I can get a full build and verify. Currently stuck on bug 251327
mconnor, could you please commit this to AVIARY. (I should get myself a CVS account).
hrm, at this point it needs approval-aviary from a very small group, set the flag, once its approved I can land it
Comment on attachment 150078 [details] [diff] [review] patch to remove Dogbert from BeOS builds need approval
Attachment #150078 - Flags: approval-aviary?
Comment on attachment 150078 [details] [diff] [review] patch to remove Dogbert from BeOS builds a=asa for checkin to aviary.
Attachment #150078 - Flags: approval-aviary? → approval-aviary+
mconnor, can you please check this in so it can be closed? (Firefox for BeOS will build from CVS with this checkin which makes me very happy).
checked into trunk and aviary branch
Status: NEW → RESOLVED
Closed: 21 years ago
Keywords: fixed-aviary1.0
Resolution: --- → FIXED
Component: Build Config → General
Product: Firefox → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: