Bug 245653 - don't try to use dogbert migrator on BeOS.  Patch by thesuckiestemail@yahoo.se, r=sergei_d@fi.tartu.ee, a=asa.